add first request

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 
 
+    <div id="ticket_price"></div>
 
-    <script src="./assets/main.js"></script>
+    <script type="text/javascript" src="./assets/main.js"></script>
     
 </body>
 </html>
